# pando-product-service

./: .gitignore  env  env.example  pyproject.toml
app/: logger.py  main.py
app/api/: deps.py
app/api/v1/: git_auth_mgmt.py  models.py  repo_mgmt.py
app/config/: chat_models.json.example  cv_models.json.example  embedding_models.json.example  rerank_models.json.example  settings.py  stt_models.json.example  tts_models.json.example
app/constants/: language.py
app/infrastructure/auth/: jwt_local_validator.py  jwt_middleware.py
app/infrastructure/database/: __init__.py  base.py  factory.py  sql_connect.py
app/infrastructure/redis/: __init__.py  factory.py
app/infrastructure/storage/: __init__.py  azure_sas_connect.py  azure_spn_connect.py  base.py  factory.py  local_file_connect.py  minio_connect.py  oss_connect.py  s3_connect.py
app/middleware/: logging.py
app/models/: git_authority.py  git_repo.py
app/schemes/: git_auth_mgmt.py  repo_mgmt.py
app/services/: git_auth_mgmt_service.py  repo_mgmt_service.py
app/tasks/: clone_task.py
app/utils/: __init__.py  common.py  exceptions.py  i18n_service.py
